<resources>
    <string name="app_name" translatable="false">RingiVerse</string>
    <string name="introduce" translatable="false">Ringtones &amp; Wallpapers - RingiVerse</string>
    <string name="contact_email" translatable="false">manager.muslim360@cdtgames.com </string>
    <string name="admob_id" translatable="false">ca-app-pub-3607148519095421~2854861993</string>
    <string name="adjust_token_key" translatable="false">npox3vcg6qkg</string>
    <string name="facebook_id" translatable="false"> </string>
    <string name="facebook_client_token" translatable="false"> </string>
    <string name="imageview" translatable="false">imageView</string>
    <string name="bonus_preferences" translatable="false">Bonus_Preferences</string>
    <string name="unknown_caller" translatable="false">Unknown caller</string>
    <string name="appDesc">#1 High Quality Ringtones</string>
    <string name="next_title">Let\'s get it</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="intro_1">Let’s Start…</string>
    <string name="intro_2">One More…</string>
    <string name="intro_3">And we are done.</string>
    <string name="intro_title_1">Welcome to</string>
    <string name="intro_title_2">Get full</string>
    <string name="intro_title_3">Color phone</string>
    <string name="desc_1">Ringtones &amp; Wallpaper - RingiVerse</string>
    <string name="high_light_1">Ringify</string>
    <string name="desc_2">3D Parallax and 4K wallpapers</string>
    <string name="high_light_2">wallpapers</string>
    <string name="desc_3">Dynamic Call Screen Themes</string>
    <string name="high_light_3">Call Screen</string>
    <string name="fav_desc">You must select 3 favourite items</string>
    <string name="fav_1">Select 3 music genres you like</string>
    <string name="fav_light_1">music genres</string>
    <string name="fav_2">Choose your favorite wallpaper</string>
    <string name="fav_light_2">favorite wallpaper</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="bengali">Bengali</string>
    <string name="russian">Russian</string>
    <string name="portuguese">Portuguese</string>
    <string name="indonesian">Indonesian</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="korean">Korean</string>
    <string name="language">Language</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="retry">Retry</string>
    <string name="send">Send</string>
    <string name="ringTone">Ringtone</string>
    <string name="ringTones">Ringtones</string>
    <string name="wallPaper">Wallpaper</string>
    <string name="callScreen">Call Screen</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="searching">Searching…</string>
    <string name="topic">Topic you want</string>
    <string name="see_all">See all</string>
    <string name="unknown_cat">Unknown category</string>
    <string name="popular">Popular</string>
    <string name="explore">Explore</string>
    <string name="new_ringtones">New Ringtones</string>
    <string name="weekly_trending">Weekly Trending</string>
    <string name="editor_s_choices">Editor\'s Choices</string>
    <string name="find_ringtone">Find Ringtone</string>
    <string name="find_wallpaper">Find Wallpaper</string>
    <string name="notification">Notifications</string>
    <string name="download">Download</string>
    <string name="set_ringtone">Set as Ringtone</string>
    <string name="set_wallpaper">Set as Wallpaper</string>
    <string name="no_data_desc">Can\'t find any content?</string>
    <string name="phone_settings">Phone settings</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_desc">Support us here</string>
    <string name="setting_desc">History, cache, notification and more</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_desc">Let’s us know about your experiences</string>
    <string name="share">Share</string>
    <string name="share_desc">Recommend App to your friends</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="policy_desc">About App privacy</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="first_sort">Date created: New to Old</string>
    <string name="second_sort">Date created: Old to New</string>
    <string name="third_sort">Name: A to Z</string>
    <string name="forth_song">Name: Z to A</string>
    <string name="sort_by">Sort by</string>
    <string name="cancel">Cancel</string>
    <string name="hot_title">Hot</string>
    <string name="new_title">New</string>
    <string name="favourite_desc">What you interested in?</string>
    <string name="title_grant_Permission">Grant Permission</string>
    <string name="message_grant_Permission">Please grant all permissions to access additional functionality.</string>
    <string name="goto_setting">Go to setting</string>
    <string name="download_title">Your Ringtone is Download</string>
    <string name="ringtone_title">Setup ringtone processing</string>
    <string name="set_title">Setup notification processing</string>
    <string name="download_title_2">Your Wallpaper is Download</string>
    <string name="set_wallpaper_op1">Set as Lock Screen</string>
    <string name="set_wallpaper_op2">Set as Home Screen</string>
    <string name="set_wallpaper_op3">Both of them</string>
    <string name="set_wallpaper_1">Setup lock screen processing</string>
    <string name="set_wallpaper_2">Setup home screen processing</string>
    <string name="set_wallpaper_3">Setup both types processing</string>
    <string name="downloading">Downloading</string>
    <string name="processing">Processing</string>
    <string name="successfully">Successfully!</string>
    <string name="failed">Fail!</string>
    <string name="notif_title">Don’t miss the last updates</string>
    <string name="notif_desc">Turn on notifications to get information about new ringtone, wallpaper, features…</string>
    <string name="feedback_1">Want more ringtone like this</string>
    <string name="feedback_2">Can’t play this ringtone</string>
    <string name="feedback_3">Ringtone do not work after set ringtone</string>
    <string name="credits">Credits</string>
    <string name="credits_desc">This ringtone is create by [%1$s] under [%2$s] license</string>
    <string name="categories">Categories</string>
    <string name="trending">Trending</string>
    <string name="favourite">Favourite</string>
    <string name="favourite1">Favourite Image</string>
    <string name="favourite2">Favourite Video</string>
    <string name="favourite3">Favourite Slide</string>
    <string name="premiums">Premiums</string>
    <string name="new_wallpaper">New Wallpaper</string>
    <string name="no_internet_desc">Please connect to Wi-Fi or a mobile network to view this content</string>
    <string name="no_internet_title">No connection</string>
    <string name="try_again">Try again</string>
    <string name="save">Save</string>
    <string name="default_crop_label_text">Sample crop label</string>
    <string name="reset">Reset</string>
    <string name="crop">Crop</string>
    <string name="wallpaper_desc">Wallpaper_desc</string>
    <string name="slide">Slide</string>
    <string name="callscreen_setting">Set as Call Screen</string>
    <string name="no_connection">Still no internet connection</string>
    <string name="avatar">Avatar</string>
    <string name="background">Background</string>
    <string name="alert">Alert</string>
    <string name="icon">Icon</string>
    <string name="quick_theme">Quick Theme</string>
    <string name="customize">Customize</string>
    <string name="video">Video</string>
    <string name="single">Image</string>
    <string name="default_title">Default</string>
    <string name="flash_type">Flash type</string>
    <string name="enable_vibration">Enable Vibration</string>
    <string name="enable_flash_alert">Enable Flash Alert</string>
    <string name="flash_title"><![CDATA[Flash & Vibrate test]]></string>
    <string name="vibration_type">Vibration type</string>
    <string name="apply">Apply</string>
    <string name="live">Video Wallpaper</string>
    <string name="permission_denied">Permission denied</string>
    <string name="setting_saved">Setting saved</string>
    <string name="enable_function">Enable functions before testing.</string>
    <string name="select_testing_value">Select values before testing.</string>
    <string name="successful_setup">Setup successfully</string>
    <string name="error_setup">Setup error</string>
    <string name="save_failed">Failed to save cropped image</string>
    <string name="permission_granted">Permission granted</string>
    <string name="setup_complete">Setup complete. You can now use call screen.</string>
    <string name="grant_all_permissions">Please grant all permissions to continue.</string>
    <string name="can_not_open_default">Can\'t open default apps settings.</string>
    <string name="can_not_overlay">Can\'t open overlay permission settings.</string>
    <string name="first_wpp_sort">Default</string>
    <string name="second_wpp_sort">Trending</string>
    <string name="third_wpp_sort">New</string>
    <string name="phone_setting">Phone Settings</string>
    <string name="clear_caches">Clear caches</string>
    <string name="reset_ringtones">Reset all ringtones to default</string>
    <string name="reset_wallpapers">Reset all wallpapers to default</string>
    <string name="set_wallpaper_title">Set Wallpaper</string>
    <string name="exit">Exit</string>
    <string name="selection_title">You can select up to 3 only</string>
    <string name="call_screen_feedback_1">Want more customizes</string>
    <string name="call_screen_feedback_2">Call Screen do not work after set as Call Screen</string>
    <string name="reset_wallpaper_question">Do you really want to reset your current wallpaper?</string>
    <string name="reset_ringtone_question">Do you really want to reset your current ringtone?</string>
    <string name="reset_cache_question">Do you really want to clear cache?</string>
    <string name="reset_wallpaper">Reset Wallpaper</string>
    <string name="reset_ringtone">Reset Ringtone</string>
    <string name="reset_cache">Clear Caches</string>
    <string name="cache_1">Clear cache successfully</string>
    <string name="cache_2">Failed to clear cache</string>
    <string name="ringtone_1">Ringtone reset to default</string>
    <string name="ringtone_2">Failed to reset ringtone</string>
    <string name="wallpaper_1">Wallpaper reset to default</string>
    <string name="wallpaper_2">Failed to reset wallpaper</string>
    <string name="preview">Preview</string>
    <string name="up_three">You can select up to 3 only</string>
    <string name="unknwon_title">Unknown title</string>
    <string name="unknwon_author">Unknown author</string>
    <string name="five_seconds">5 seconds</string>
    <string name="fifteen_seconds">15 seconds</string>
    <string name="one_minute">1 minute</string>
    <string name="five_minutes">5 minute</string>
    <string name="one_hour">1 hour</string>
    <string name="one_day">1 day</string>
    <string name="set_alarm">Transition duration</string>
    <string name="email_feedback_title">Feedback Call Theme version: %1$s</string>
    <string name="search_image">Search Image</string>
    <string name="search_slide">Search Slide</string>
    <string name="search_video">Search Video</string>
    <string name="select_bg_value">Select background before testing.</string>
    <string name="do_you_want_to_exit_app">Do you want to exit app?</string>
</resources>