<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:background="@drawable/background_radius_16"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">
    
    <ImageView
        android:src="@drawable/icon_bell"
        android:contentDescription="@string/imageview"
        android:layout_width="@dimen/_83sdp"
        android:layout_height="@dimen/_89sdp"/>

    <TextView
        android:text="@string/notif_title"
        style="@style/CustomTextStyleSemiBold16sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/notif_desc"
        android:layout_marginTop="@dimen/_8sdp"
        style="@style/CustomTextStyle14sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/okBtn"
        android:textColor="@color/white"
        android:gravity="center"
        style="@style/CustomTextStyleSemiBold14sp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/ok"
        android:background="@drawable/background_radius_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>