<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:background="@drawable/background_radius_16"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_17sdp"
    android:paddingBottom="@dimen/_20sdp"
    android:paddingTop="@dimen/_26sdp">

    <TextView
        android:text="@string/credits"
        android:layout_marginTop="@dimen/_12sdp"
        style="@style/CustomTextStyleSemiBold16sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/creditDesc"
        android:text="@string/credits_desc"
        android:layout_marginTop="@dimen/_8sdp"
        android:textColor="@color/customBlack"
        style="@style/CustomTextStyle14sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/okBtn"
        android:textColor="@color/white"
        android:gravity="center"
        style="@style/CustomTextStyleSemiBold14sp"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:background="@drawable/background_radius_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>