<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_16sdp"
    android:background="@drawable/background_radius_16"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_17sdp"
    android:paddingTop="@dimen/_24sdp"
    android:paddingBottom="@dimen/_20sdp">

    <TextView
        style="@style/CustomTextStyleSemiBold16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center"
        android:text="@string/set_alarm" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <RelativeLayout
                android:id="@+id/fiveSecondOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/fiveSecondIcon"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/imageview"
                    android:src="@drawable/icon_unselect_gray_circle" />

                <TextView
                    style="@style/CustomTextStyle14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_toEndOf="@id/fiveSecondIcon"
                    android:gravity="center"
                    android:text="@string/five_seconds" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/fifteenSecondOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/fifteenSecondIcon"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/imageview"
                    android:src="@drawable/icon_unselect_gray_circle" />

                <TextView
                    style="@style/CustomTextStyle14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_toEndOf="@id/fifteenSecondIcon"
                    android:gravity="center"
                    android:text="@string/fifteen_seconds" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/oneMinuteOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/oneMinuteIcon"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/imageview"
                    android:src="@drawable/icon_unselect_gray_circle" />

                <TextView
                    style="@style/CustomTextStyle14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_toEndOf="@id/oneMinuteIcon"
                    android:gravity="center"
                    android:text="@string/one_minute" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/fiveMinuteOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/fiveMinuteIcon"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/imageview"
                    android:src="@drawable/icon_unselect_gray_circle" />

                <TextView
                    style="@style/CustomTextStyle14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_toEndOf="@id/fiveMinuteIcon"
                    android:gravity="center"
                    android:text="@string/five_minutes" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/oneHourOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/oneHourIcon"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/imageview"
                    android:src="@drawable/icon_unselect_gray_circle" />

                <TextView
                    style="@style/CustomTextStyle14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_toEndOf="@id/oneHourIcon"
                    android:gravity="center"
                    android:text="@string/one_hour" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/oneDayOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/oneDayIcon"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/imageview"
                    android:src="@drawable/icon_unselect_gray_circle" />

                <TextView
                    style="@style/CustomTextStyle14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_18sdp"
                    android:layout_toEndOf="@id/oneDayIcon"
                    android:gravity="center"
                    android:text="@string/one_day" />
            </RelativeLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelBtn"
            style="@style/CustomTextStyleSemiBold14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/background_radius_12_purple_stroke"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textColor="@color/main_color"
            android:visibility="gone" />

        <TextView
            android:id="@+id/okBtn"
            style="@style/CustomTextStyleSemiBold14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_radius_12"
            android:gravity="center"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/ok"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>