<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:background="@drawable/background_radius_16"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_20sdp"
    android:paddingBottom="@dimen/_16sdp">

    <TextView
        style="@style/CustomTextStyleSemiBold16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center"
        android:text="@string/do_you_want_to_exit_app"
        android:textColor="@color/main_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_12sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_exit"
            style="@style/CustomTextStyleMedium16sp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/background_radius_12_purple_stroke"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/exit"
            android:textColor="@color/main_color" />

        <TextView
            android:id="@+id/text_cancel"
            style="@style/CustomTextStyleSemiBold16sp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/background_radius_12"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/cancel"
            android:textColor="@color/white" />


    </LinearLayout>
</LinearLayout>